# learnin-cpp-music_day

./: .gitignore  CMakeLists.txt  README.md  music_day  music_day-chord_methods.txt  music_day-chord_types.txt  music_day-key_methods.txt  music_day-keys.txt  music_day-left_hand.txt  music_day-right_hand.txt  music_day-schedule.txt  music_day.cpp  music_day.hpp  my_music_day  my_music_day.cpp
music_day_files/: music_day-chord_methods.txt  music_day-chord_types.txt  music_day-left_hand.txt  music_day-right_hand.txt  music_day-scale_articulations.txt  music_day-schedule.txt
